# MorphLan

./: LICENSE  README.md  settings.gradle.kts
compiler/: Cargo.toml
compiler/src/: compiler.rs  lexer.rs  main.rs  parser.rs
interpreter/: Cargo.toml
