[package]
name = "morph_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Manuel <emmanuelodhiambo366@gmail.com>"]
description = "Morph programming language compiler in Rust"
license = "MIT"
repository = "https://github.com/yourusername/morph_compiler"
readme = "README.md"

[dependencies]
# Lexer
logos = "0.13"

# Parser
nom = "7"

# Error handling
thiserror = "1.0"

# Logging for diagnostics
log = "0.4"
env_logger = "0.9"

# LLVM integration for code generation (using safe LLVM bindings)
inkwell = { version = "0.2.0", features = ["llvm15"] }
llvm-sys = { version = "150.0.0", features = ["llvm15"] }

# Serialization (for intermediate representations, ASTs, etc.)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Testing & Benchmarking
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

